src_old/objects/Job__c.object
<CustomObject>
    <description>Job defines the body of work to be performed at a Location and all of the dates related to the Job performance. A Job is related to a Project, Project Service, Project Location, Job Material, Contact, Exception, and Job Attempt.</description>
    <fields>
        <fullName>AccountableExecutionCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field that indicates the Execution Company accountable for this Job.</description>
        <inlineHelpText>The execution company accountable for the job</inlineHelpText>
        <label>Accountable Execution Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jobs (Accountable For Execution Company)</relationshipLabel>
        <relationshipName>Jobs_AccountableForExecutionCompany</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActiveJobAttemptTimeReported__c</fullName>
        <description>The field that indicates the minutes reported for the Job.</description>
        <formula>ActiveJobAttempt__r.TimeReported__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Reported (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActiveJobAttempt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field that displays Job Attempts</description>
        <label>Active Job Attempt</label>
        <referenceTo>JobAttempt__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AllowTeamManagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Team Management in OneHub Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ArchiveStatus__c</fullName>
        <description>The field that indicates the Archive Status of the Job.</description>
        <inlineHelpText>The archive status of the job</inlineHelpText>
        <label>Archive Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Archived</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssignedContactFirstName__c</fullName>
        <description>The field that indicates the first name of the Assigned Contact.</description>
        <formula>ActiveJobAttempt__r.AssignedContactFirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedContactHomeLatitude__c</fullName>
        <description>The field that indicates the home latitude of the Assigned Contact.</description>
        <formula>ActiveJobAttempt__r.AssignedContactHomeLatitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The home latitude of the assigned contact</inlineHelpText>
        <label>Assigned Contact Home Latitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssignedContactHomeLongitude__c</fullName>
        <description>The field that indicates the home longitude of the Assigned Contact.</description>
        <formula>ActiveJobAttempt__r.AssignedContactHomeLongitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The home longitude of the assigned contact</inlineHelpText>
        <label>Assigned Contact Home Longitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssignedContactId__c</fullName>
        <description>The field that indicates the ID number of the Assigned Contact.</description>
        <formula>ActiveJobAttempt__r.AssignedContactId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The ID number of the assigned contact</inlineHelpText>
        <label>Assigned Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedContactLastName__c</fullName>
        <description>The field that indicates the Last name of the Assigned Contact.</description>
        <formula>ActiveJobAttempt__r.AssignedContactLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedContactPhone__c</fullName>
        <description>The field for the phone number of the Assigned Contact.</description>
        <formula>ActiveJobAttempt__r.AssignedContactPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The phone number of the assigned contact</inlineHelpText>
        <label>Assigned Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedContactTitle__c</fullName>
        <description>The field that indicates the Title of the Assigned Contact.</description>
        <formula>ActiveJobAttempt__r.AssignedContactTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The title of the assigned contact</inlineHelpText>
        <label>Assigned Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedEmployeeId__c</fullName>
        <description>The field that indicates the ID of the employee assigned to the Job.</description>
        <formula>ActiveJobAttempt__r.AssignedEmployeeId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The ID number of the employee assigned to the job</inlineHelpText>
        <label>Assigned Employee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttemptMaxLastModifiedDate__c</fullName>
        <label>Attempt Max Last Modified Date</label>
        <summarizedField>JobAttempt__c.LastModifiedDate</summarizedField>
        <summaryFilterItems>
            <field>JobAttempt__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>JobAttempt__c.Job__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CompletionStatus__c</fullName>
        <description>A picklist that indicates if a Job was completed.</description>
        <inlineHelpText>Whether or not the job was completed</inlineHelpText>
        <label>Completion Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                    <default>true</default>
                    <label>Not Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignment</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Jobs (Consignment)</relationshipLabel>
        <relationshipName>Jobs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreateAttemptException__c</fullName>
        <label>Create Attempt Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateAttempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Attempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DayNumber__c</fullName>
        <label>Day Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDateCalculated__c</fullName>
        <formula>IF (UPPER(ProjectScheduleOptionCode__c) == &apos;EC&apos;,ProjectEndDate__c,IF (ISBLANK(JobScheduledDate__c),ProjectEndDate__c,JobScheduledDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date (Job)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <formula>JobEndTime__c</formula>
        <label>End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedMinutesOverride__c</fullName>
        <label>Estimated Minutes Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedMinutes__c</fullName>
        <description>The field that indicates the estimated minutes for the Job.</description>
        <formula>IF(ISBLANK(EstimatedMinutesOverride__c), ProjectService__r.EstimatedMinutes__c, EstimatedMinutesOverride__c)</formula>
        <label>Time Estimate (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExceptionCode__c</fullName>
        <description>The field that indicates the code of the exception.</description>
        <formula>ActiveJobAttempt__r.ExceptionCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The code of the exception</inlineHelpText>
        <label>Exception Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionComments__c</fullName>
        <label>Exception Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionName__c</fullName>
        <formula>ActiveJobAttempt__r.ExceptionName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exception Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailedQC__c</fullName>
        <description>The checkbox that indicates that the Job failed QC.</description>
        <formula>ActiveJobAttempt__r.FailedQC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If selected, the job failed QC.</inlineHelpText>
        <label>Failed QC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FulfillmentCenter__c</fullName>
        <description>The field that indicates the name of the Fulfillment Center that will provide materials for the Job.</description>
        <formula>ProjectService__r.FulfillmentCenterName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The fulfillment center that will provide materials for the Job.</inlineHelpText>
        <label>Fulfillment Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPSVerified__c</fullName>
        <description>To verify if Job the is reported at the requested location as per compliance</description>
        <formula>DISTANCE(Location__r.GeoLocation__c, ActiveJobAttempt__r.ExceptionReportedGeoLocation__c, &apos;mi&apos;)&lt;$Setup.ExceptionQuestionGPSSettings__c.RadiusThreshold__c</formula>
        <inlineHelpText>Job Reported Location</inlineHelpText>
        <label>GPSVerified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasException__c</fullName>
        <description>The checkbox that indicates if a Job has an exception.</description>
        <formula>ActiveJobAttempt__r.ExceptionCode__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If selected, the job has an exception.</inlineHelpText>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasFulfillment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The checkbox that indicates whether or not a Job has fulfillment.</description>
        <inlineHelpText>If selected, the job has fulfillment.</inlineHelpText>
        <label>Fulfillment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HelpTimeMinutesCalculated__c</fullName>
        <label>HelpTime Minutes Calculated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HelpTimeMinutesOverride__c</fullName>
        <label>HelpTime Minutes Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HelpTimeMinutes__c</fullName>
        <formula>IF (ISBLANK(HelpTimeMinutesOverride__c),HelpTimeMinutesCalculated__c,HelpTimeMinutesOverride__c)</formula>
        <label>HelpTime Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsAttemptable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be set as TRUE if &apos;create attempts&apos; is allowed</description>
        <inlineHelpText>This field will be set as TRUE if &apos;create attempts&apos; is allowed</inlineHelpText>
        <label>Is Attemptable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCancellable__c</fullName>
        <description>The checkbox that indicates if this Job can be canceled.</description>
        <formula>OR 
(

JobCancelOverride__c == true, 

AND(

	AND(LOWER(ProjectStatus__c) != &apos;planning&apos;, LOWER(ProjectStatus__c) != &apos;closed&apos;, LOWER(ProjectStatus__c) != &apos;pending&apos;), 
	LOWER(TEXT(JobStatus__c)) != &apos;canceled&apos;, 
	LOWER(TEXT(JobStatus__c)) != &apos;closed&apos;, 

(DATETIMEVALUE(NULLVALUE(JobScheduledDate__c, JobStartDate__c)) - NOW() - 
													((NULLVALUE(JobCancelLeadTime__c,0) - 5)/24)) &gt; 0

))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Job can be canceled if Project Status = Booked, Launched or In Progress and Job is within Cancel Lead Time.</inlineHelpText>
        <label>Cancelable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCompletedinWindow__c</fullName>
        <description>The checkbox that indicates if the job was completed between Project Start Date and Project End Date.</description>
        <formula>AND(( JobCompletedDate__c &gt;=OriginalProjectStartDate__c),( JobCompletedDate__c &lt;=Project__r.LaunchedProjectEndDate__c))&amp;&amp; Text(CompletionStatus__c)=&quot;Completed&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If selected, the job was completed between Project Start Date and Project End Date.</inlineHelpText>
        <label>Completed in Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCompletedonDate__c</fullName>
        <description>The checkbox that indicates if the Job was completed on date.</description>
        <formula>Text(CompletionStatus__c) = &quot;Completed&quot; &amp;&amp; JobCompletedDate__c== JobCommittedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If selected, the job was completed on date.</inlineHelpText>
        <label>Completed on Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExecutedOnDate__c</fullName>
        <description>The checkbox that indicates whether or not the Job was executed on date.</description>
        <formula>IsExecuted__c = True &amp;&amp; JobExecutedDate__c== JobCommittedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If selected,the job was executed on date.</inlineHelpText>
        <label>Executed On Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExecuted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The checkbox that indicates if a Job has been executed.</description>
        <inlineHelpText>If selected, the job has been executed.</inlineHelpText>
        <label>Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExecutedinWindow__c</fullName>
        <description>The checkbox that indicates if the job was executed between Project Start Date and Project End Date.</description>
        <formula>AND((JobExecutedDate__c&gt;=OriginalProjectStartDate__c),(JobExecutedDate__c&lt;=Project__r.LaunchedProjectEndDate__c))&amp;&amp; IsExecuted__c=True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If selected, the job was executed between Project Start Date and Project End Date.</inlineHelpText>
        <label>Executed in Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The checkbox that indicates that the Job is rescheduled.</description>
        <inlineHelpText>If selected, the job is rescheduled.</inlineHelpText>
        <label>Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsScheduled__c</fullName>
        <description>The checkbox that indicates if the Job is scheduled.</description>
        <formula>IF(ISNULL(ActiveJobAttempt__r.AttemptScheduleDate__c), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If selected, the job is scheduled.</inlineHelpText>
        <label>Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShift__c</fullName>
        <formula>UPPER(TEXT(Service__r.Specialization__c)) == &apos;SHIFT&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Shift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTask__c</fullName>
        <formula>UPPER(TEXT(Service__r.Specialization__c)) == &apos;TASK&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleToClient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The checkbox that indicates whether or not information is visible to the client.</description>
        <inlineHelpText>If selected, this information is visible to the client.</inlineHelpText>
        <label>Visible To Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobAttemptedDate__c</fullName>
        <description>The field that indicates the last attempt date of the Job.</description>
        <formula>ActiveJobAttempt__r.AttemptedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Attempt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobCancelLeadTime__c</fullName>
        <description>This field indicates the lead time required to cancel a Job.</description>
        <formula>Project__r.JobCancelLeadTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The lead time for a canceled job</inlineHelpText>
        <label>Cancel Lead Time (hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobCancelOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The checkbox that indicates whether the cancellation of a Job is overridden.</description>
        <inlineHelpText>If selected, the cancellation of this job is overridden.</inlineHelpText>
        <label>Cancel Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobCanceledComments__c</fullName>
        <description>The entry field for comments if a job is canceled.</description>
        <inlineHelpText>Explains why the job was canceled.</inlineHelpText>
        <label>Canceled Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobCanceledReason__c</fullName>
        <description>A picklist that indicates reasons why a job was canceled.</description>
        <inlineHelpText>The reason that the job was canceled.</inlineHelpText>
        <label>Canceled Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supplier Requested</fullName>
                </value>
                <value>
                    <fullName>Retailer Requested</fullName>
                </value>
                <value>
                    <fullName>No Product</fullName>
                </value>
                <value>
                    <fullName>Item not approved</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobCloseDate__c</fullName>
        <description>The field that indicates the date that the Job closed.</description>
        <formula>Project__r.EndDate__c +  JobGracePeriod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobCommittedDate__c</fullName>
        <description>The field that indicates the date that a Job committed.</description>
        <inlineHelpText>The date the job was committed</inlineHelpText>
        <label>Committed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobCompletedDate__c</fullName>
        <description>The field that indicates the date the Job was completed.</description>
        <inlineHelpText>The date the job was completed</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobDateAssigned__c</fullName>
        <description>The field that indicates the date and time a Job was last assigned.	.</description>
        <inlineHelpText>The date and time the job was last assigned</inlineHelpText>
        <label>Date Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobDateCanceled__c</fullName>
        <description>The field that indicates the date and time a Job was canceled.</description>
        <inlineHelpText>The date and time the job was canceled</inlineHelpText>
        <label>Date Canceled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobDateClosed__c</fullName>
        <description>The field that indicates the date and time a Job was closed.</description>
        <inlineHelpText>The date and time the job was closed</inlineHelpText>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobDateOpened__c</fullName>
        <description>The field that Indicates the date and time a Job was opened.</description>
        <inlineHelpText>The date and time the job was opened</inlineHelpText>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobDateOriginallyAssigned__c</fullName>
        <description>The field that indicates the date and time a Job was originally assigned.</description>
        <inlineHelpText>The date and time the job was originally assigned</inlineHelpText>
        <label>Date Originally Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobDateOriginallyReported__c</fullName>
        <description>The field that indicates the date and time a Job was originally reported.</description>
        <inlineHelpText>The date and time the job was originally reported</inlineHelpText>
        <label>Date Originally Reported</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobDateReported__c</fullName>
        <description>The field that indicates the date and time a Job was last reported.</description>
        <formula>ActiveJobAttempt__r.DateReported__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date and time the job was last reported</inlineHelpText>
        <label>Job Date Reported</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobDateStarted__c</fullName>
        <description>The field that indicates the date and time a Job started.</description>
        <inlineHelpText>The date and time the job started</inlineHelpText>
        <label>Date Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobEndDate__c</fullName>
        <description>The field that indicates the end date of the Job.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobEndTime__c</fullName>
        <description>The field that indicates the local end time of the Job.</description>
        <label>End Time (Local)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobExecutedDate__c</fullName>
        <description>The field that indicates the date a Job was executed.</description>
        <inlineHelpText>The date the job was executed</inlineHelpText>
        <label>Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobFirstAttemptDate__c</fullName>
        <description>The field that indicates the first attempt date of the Job.</description>
        <label>First Attempt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobGracePeriod__c</fullName>
        <description>The field that indicates the Grace Period of a Job in days.</description>
        <formula>Project__r.ProjectGracePeriodDuration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The grace period of the job</inlineHelpText>
        <label>Grace Period (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobLaunchDate__c</fullName>
        <description>The field that indicates the date when jobs are made available to the Execution Company.</description>
        <formula>Project__r.ProjectLaunchDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date when jobs are made available to the Execution Company.</inlineHelpText>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobManualLink__c</fullName>
        <description>View Job Manual</description>
        <formula>IF(JobManualUrl__c!=&apos;&apos;, HYPERLINK(JobManualUrl__c , &apos;View Job Manual&apos;), &apos;No Manual&apos;)</formula>
        <label>Job Manual Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobManualUrl__c</fullName>
        <description>The field that displays the link to the Job manual.</description>
        <formula>ProjectService__r.JobManualURL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Manual Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobScheduledDate__c</fullName>
        <description>The field that indicates the date a Job is scheduled.</description>
        <inlineHelpText>The date the job was scheduled</inlineHelpText>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobStartDate__c</fullName>
        <description>The field that indicates the start date for the Job.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobStartTime__c</fullName>
        <description>The field that indicates the local start time for the Job.</description>
        <label>Start Time (Local)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobStatusPrevious__c</fullName>
        <description>This keeps track of the previous status of the job.</description>
        <inlineHelpText>This keeps track of the previous status of the job.</inlineHelpText>
        <label>Previous Job Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobStatus__c</fullName>
        <description>A picklist that indicates the status of the Job.</description>
        <inlineHelpText>The status of the job</inlineHelpText>
        <label>Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Reported</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobUTCEndTime__c</fullName>
        <description>The field that indicates the UTC end time of the Job.</description>
        <label>End Time (UTC)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JobUTCStartTime__c</fullName>
        <description>The field that indicates the UTC start time of the Job.</description>
        <label>Start Time (UTC)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KeepAssignmentOverride__c</fullName>
        <label>Keep Assignment Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeepAssignment__c</fullName>
        <formula>IF (OR(ISPICKVAL( KeepAssignmentOverride__c, &apos;No Override&apos;),ISBLANK(TEXT(KeepAssignmentOverride__c))), ProjectLocation__r.KeepAssignment__c, IF (ISPICKVAL(KeepAssignmentOverride__c, &apos;Yes&apos;),TRUE,FALSE) )</formula>
        <label>Keep Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>This custom field will be populated with standard Last Modified Date value. Created this field for Indexing purposes</description>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastPBScheduledDateChangeDateTime__c</fullName>
        <label>Last PB Scheduled Date Change Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocationNumber__c</fullName>
        <description>The field that indicates the location number of the Job.</description>
        <formula>Location__r.LocationNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The location number of the job</inlineHelpText>
        <label>Location #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationState__c</fullName>
        <description>The field that indicates the state where the Job is located.</description>
        <formula>TEXT(Location__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The state where the job is located</inlineHelpText>
        <label>Location State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationTimezoneOffset__c</fullName>
        <description>UTC time zone offset for location that is used in start and end time UTC conversions.</description>
        <inlineHelpText>The UTC time zone offset for job location that is used to determine the start time and end time in UTC time zone.</inlineHelpText>
        <label>LocationTimezoneOffset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field that indicates the location of the Job.</description>
        <inlineHelpText>The location of the job</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LogInEntityChange__c</fullName>
        <formula>AND(IsCancellable__c  ,ProjectStatus__c ==&apos;In Progress&apos;)</formula>
        <label>LogInEntityChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaterialCount__c</fullName>
        <label>Material Count</label>
        <summaryFilterItems>
            <field>JobMaterial__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>JobMaterial__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfDays__c</fullName>
        <label>Number of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfWorkers__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Number of workers required on this job</inlineHelpText>
        <label>Number of Workers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>